# cvparser

./: OLD_WORKS_2_main.py  OLD_WORKS_main.py  OLDmain.py  README.md  chroma.sqlite3  main.py  prompt.txt  pyproject.toml
templates/: index.html
